# practiceCopilot

./: .gitignore  README.md
.github/: COPILOT_INSTRUCTIONS.md  COPILOT_REFACTORING_GUIDE.md
task01/: .gitignore  CMakeLists.txt  build_and_test.ps1  build_gtest.ps1
task01/src/: url.c  url.h  url_tools.c  url_tools.h
task01/tests/: test_integration_gtest.cpp  test_url_gtest.cpp  test_url_tools.c  test_url_tools_gtest.cpp
task02/: CMakeLists.txt  build.ps1  build_gtest.ps1  rockScissorsPaper.c
task02/src/: game.c  game.h  main.c
task02/tests/: test_game_gtest.cpp
task03/: .gitignore  BUILD_GUIDE.md  CMAKE_BUILD.md  CMakeLists.txt  GTEST_BUILD.md  Makefile  PROJECT_ARCHITECTURE.md  README.md  build.ps1  cmake-build.ps1
task03/docs/: C-style.md  database-style.md  spec.md  test-style.md
task03/include/: book.h  database.h  loan.h  member.h
task03/src/: book.c  copilot-instructions.md  database.c  flowchart.plantuml  loan.c  main.c  member.c
task03/tests/: CMakeLists.txt  test_book.c  test_book_gtest.cpp
task04/: CMakeLists.txt  build_gtest.ps1
task04/.github/prompts/: code_review.prompt.md  create_module.prompt.md  refactor_code.prompt.md
task04/include/: getDiscount.h
task04/src/: date_utils.c  date_utils.h  getDiscount.c  loan.c  loan.h  vulnerable_server.c
task04/tests/: test_date_utils_gtest.cpp  test_discount_gtest.cpp
task05/: .gitignore
